# NFTQMLShimmerpp

./: CMakeLists.txt  Config.cmake.in  README.md  main.cpp
.github/workflows/: build-test-install.yml  build-wasm.yaml
ExampleApp/: CMakeLists.txt.FetchContent  CMakeLists.txt.add_sub_method  CMakeLists.txt.add_subdirectory  CMakeLists.txt.fetch_find_method  main.cpp
ExampleApp/add_sub_method/: CMakeLists.txt
ExampleApp/fetch_find_method/: CMakeLists.txt
ExampleApp/qml/: window.qml
include/: nftmonitor.hpp
qml/: NFTMonitor.qml  QMLMonitor.qml
src/: nftmonitor.cpp
wasm/: index.html  style.css
